--- a/ko-kr/privacy-policy/index.html
+++ b/ko-kr/privacy-policy/index.html
@@ -304,7 +304,7 @@
             </li>
             <li>
               <p>
-                <strong>플래시 쿠키.</strong> 당사 서비스의 특정 기능은 로컬 저장 개체(또는 플래시 쿠키)를 사용하여 당사 서비스에서의 귀하의 기본 설정 또는 귀하의 활동에 대한 정보를 수집 및 저장할 수 있습니다. 플래시 쿠키는 브라우저 쿠키에 사용되는 것과 동일한 브라우저 설정으로 관li되지 않습니다. 플래시 쿠키를 삭제하는 방법에 대한 자세한 내용은 "로컬 공유 개체를 비활성화하거나 삭제하기 위한 설정은 어디에서 변경할 수 있습니까?"를 참조하십시오. <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank">에서 사용 가능 https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></a>
+                <strong>플래시 쿠키.</strong> 당사 서비스의 특정 기능은 로컬 저장 개체(또는 플래시 쿠키)를 사용하여 당사 서비스에서의 귀하의 기본 설정 또는 귀하의 활동에 대한 정보를 수집 및 저장할 수 있습니다. 플래시 쿠키는 브라우저 쿠키에 사용되는 것과 동일한 브라우저 설정으로 관li되지 않습니다. 플래시 쿠키를 삭제하는 방법에 대한 자세한 내용은 "로컬 공유 개체를 비활성화하거나 삭제하기 위한 설정은 어디에서 변경할 수 있습니까?"를 참조하십시오. <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;">에서 사용 가능 https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></a>
               </p>
             </li>
             <li>
