--- a/ja-jp/privacy-policy/index.html
+++ b/ja-jp/privacy-policy/index.html
@@ -305,7 +305,7 @@
             </li>
             <li>
               <p>
-                <strong>FlashCookies。</strong>当社のサービスの特定の機能は、ローカルに保存されたオブジェクト（またはFlash Cookies）を使用して、お客様の好みまたは当社のサービスでのアクティビティに関する情報を収集および保存する場合があります。 Flash Cookieは、ブラウザCookieに使用されるものと同じブラウザ設定では管理されません。 Flash Cookieを削除する方法の詳細については、「ローカル共有オブジェクトを無効にする、または削除するための設定をどこで変更できますか？」をお読みください。で入手可能<a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>
+                <strong>FlashCookies。</strong>当社のサービスの特定の機能は、ローカルに保存されたオブジェクト（またはFlash Cookies）を使用して、お客様の好みまたは当社のサービスでのアクティビティに関する情報を収集および保存する場合があります。 Flash Cookieは、ブラウザCookieに使用されるものと同じブラウザ設定では管理されません。 Flash Cookieを削除する方法の詳細については、「ローカル共有オブジェクトを無効にする、または削除するための設定をどこで変更できますか？」をお読みください。で入手可能<a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>
               </p>
             </li>
             <li>
