--- a/fil-ph/privacy-policy/index.html
+++ b/fil-ph/privacy-policy/index.html
@@ -185,7 +185,7 @@
           <p>Itong Privacy Policy ay dini-describe ang Aming mga policy at mga procedure sa pag-collect, paggamit at pag-disclosure sa Iyong information habang ginagamit Mo ang Service at nagsasabi sa'yo about sa privacy rights Mo at paano Ka pino-protect-ahan ng batas.</p>
         </div>
         <div class="paragraph">
-          <p>Ginagamit Namin ang Personal data Mo para ma-provide at ma-improve ang Service. Sa paggamit sa Service, uma-agree Ka sa pag-collect at paggamit ng information in accordance sa Privacy Policy na'to. Ang Privacy Policy na'to ay ginawa sa tulong ng <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank"></a>Template ng Privacy Policy. <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+          <p>Ginagamit Namin ang Personal data Mo para ma-provide at ma-improve ang Service. Sa paggamit sa Service, uma-agree Ka sa pag-collect at paggamit ng information in accordance sa Privacy Policy na'to. Ang Privacy Policy na'to ay ginawa sa tulong ng <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank"></a>Template ng Privacy Policy. <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
         </div>
 
 
@@ -295,7 +295,7 @@
             </li>
             <li>
               <p>
-                <strong>Mga Flash Cookie.</strong> Ang mga certain feature ng aming Service ay pwedeng gumamit ng mga local stored objects (o mga Flash Cookie) para mag-collect at mag-store ng information about sa mga preference Mo o aktibidad Mo sa aming Service. Mga Flash Cookie ay hindi nai-manage ng parehong mga browser setting bilang mga ginagamit para sa mga Browser Cookie. Para sa more information kung paano mo matatanggal ang mga Flash Cookie, please basahin ang "Saan ko mababago ang mga setting para sa pagdi-disable, o pag-delete ng mga local shared objects?" na available sa <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>
+                <strong>Mga Flash Cookie.</strong> Ang mga certain feature ng aming Service ay pwedeng gumamit ng mga local stored objects (o mga Flash Cookie) para mag-collect at mag-store ng information about sa mga preference Mo o aktibidad Mo sa aming Service. Mga Flash Cookie ay hindi nai-manage ng parehong mga browser setting bilang mga ginagamit para sa mga Browser Cookie. Para sa more information kung paano mo matatanggal ang mga Flash Cookie, please basahin ang "Saan ko mababago ang mga setting para sa pagdi-disable, o pag-delete ng mga local shared objects?" na available sa <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>
               </p>
             </li>
             <li>
@@ -306,7 +306,7 @@
           </ul>
         </div>
         <div class="paragraph">
-          <p>Ang mga Cookie ay pwedeng mga "Persistent" o "Session" Cookie. Mga Persistent Cookie ay magse-stay sa personal computer Mo o mobile device kapag ikaw ay offline, habang ang mga Session Cookie ay nai-delete sa lalong madaling panahon mo isinara ang web browser Mo. Alamin pa ang about sa mga cookie: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">Paggamit sa mga Cookie Free Privacy Policy <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>.</p>
+          <p>Ang mga Cookie ay pwedeng mga "Persistent" o "Session" Cookie. Mga Persistent Cookie ay magse-stay sa personal computer Mo o mobile device kapag ikaw ay offline, habang ang mga Session Cookie ay nai-delete sa lalong madaling panahon mo isinara ang web browser Mo. Alamin pa ang about sa mga cookie: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">Paggamit sa mga Cookie Free Privacy Policy <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>.</p>
         </div>
         <div class="paragraph">
           <p>Parehas Natin ginagamit ang mga Session at Persistent Cookie para sa mga purpose nai-set sa ibaba:</p>
@@ -491,12 +491,12 @@
           <ul>
             <li>
               <p>Gamit ang email:<br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a><br>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
             </li>
             <li>
               <p>Gamit ang pagbi-visit sa page na'to sa'ming website:<br>
-                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
             </li>
           </ul>
         </div>
