--- a/ja-jp/privacy-policy/index.html
+++ b/ja-jp/privacy-policy/index.html
@@ -195,7 +195,7 @@
           <p>このプライバシーポリシーは、お客様が本サービスを使用する際のお客様の情報の収集、使用、および開示に関する当社のポリシーと手順を説明し、お客様のプライバシー権と法律がお客様を保護する方法について説明します。</p>
         </div>
         <div class="paragraph">
-          <p>当社は、お客様の個人データを使用して、サービスを提供および改善します。本サービスを利用することにより、お客様は本プライバシーポリシーに従って情報を収集および使用することに同意するものとします。このプライバシーポリシーは、<a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">プライバシーポリシーテンプレート <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>を使用して作成されています。</p>
+          <p>当社は、お客様の個人データを使用して、サービスを提供および改善します。本サービスを利用することにより、お客様は本プライバシーポリシーに従って情報を収集および使用することに同意するものとします。このプライバシーポリシーは、<a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">プライバシーポリシーテンプレート <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>を使用して作成されています。</p>
         </div>
 
 
@@ -305,7 +305,7 @@
             </li>
             <li>
               <p>
-                <strong>FlashCookies。</strong>当社のサービスの特定の機能は、ローカルに保存されたオブジェクト（またはFlash Cookies）を使用して、お客様の好みまたは当社のサービスでのアクティビティに関する情報を収集および保存する場合があります。 Flash Cookieは、ブラウザCookieに使用されるものと同じブラウザ設定では管理されません。 Flash Cookieを削除する方法の詳細については、「ローカル共有オブジェクトを無効にする、または削除するための設定をどこで変更できますか？」をお読みください。で入手可能<a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>
+                <strong>FlashCookies。</strong>当社のサービスの特定の機能は、ローカルに保存されたオブジェクト（またはFlash Cookies）を使用して、お客様の好みまたは当社のサービスでのアクティビティに関する情報を収集および保存する場合があります。 Flash Cookieは、ブラウザCookieに使用されるものと同じブラウザ設定では管理されません。 Flash Cookieを削除する方法の詳細については、「ローカル共有オブジェクトを無効にする、または削除するための設定をどこで変更できますか？」をお読みください。で入手可能<a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>
               </p>
             </li>
             <li>
@@ -316,7 +316,7 @@
           </ul>
         </div>
         <div class="paragraph">
-          <p>Cookieは、「永続的」または「セッション」Cookieにすることができます。永続的なCookieは、オフラインになってもパーソナルコンピュータまたはモバイルデバイスに残りますが、セッションCookieは、Webブラウザを閉じるとすぐに削除されます。 Cookieの詳細：<a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">無料のプライバシーポリシーによるCookieの使用</a>。</p>
+          <p>Cookieは、「永続的」または「セッション」Cookieにすることができます。永続的なCookieは、オフラインになってもパーソナルコンピュータまたはモバイルデバイスに残りますが、セッションCookieは、Webブラウザを閉じるとすぐに削除されます。 Cookieの詳細：<a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">無料のプライバシーポリシーによるCookieの使用 <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>。</p>
         </div>
         <div class="paragraph">
           <p>以下に示す目的で、セッションCookieと永続Cookieの両方を使用します。</p>
@@ -501,12 +501,12 @@
           <ul>
             <li>
               <p>メール：<br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left:10px;">rarefrostbitesteam@gmail.com <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left:10px;">rarefrostbitesteam@outlook.com <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left:10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a><br>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left:10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
             </li>
             <li>
               <p>当社のウェブサイトのこのページにアクセスして：<br>
-                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left:10px;">https://rarefrostbites.pages.dev/contact <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left:10px;">https://rarefrostbites.pages.dev/contact <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
             </li>
           </ul>
         </div>
