--- a/km-kh/privacy-policy/index.html
+++ b/km-kh/privacy-policy/index.html
@@ -63,7 +63,18 @@
     <link rel="stylesheet" href="../../css/assets/sidebar.css">
     
     
-    <link rel="stylesheet" href="../../css/#.css">
+    <link rel="stylesheet" href="../../css/privacy-policy/content.css">
+    <link rel="stylesheet" href="../../css/privacy-policy/image.css">
+    <link rel="stylesheet" href="../../css/privacy-policy/texts.css">
+    <style>
+      @media only screen and (min-width: 800px) {
+        .body .content {
+          width: 800px;
+          margin-left: auto;
+          margin-right: auto;
+        }
+      }
+    </style>
 
 
 
