--- a/es-es/privacy-policy/index.html
+++ b/es-es/privacy-policy/index.html
@@ -194,7 +194,7 @@
           <p>Esta Política de Privacidad describe Nuestras políticas y procedimientos sobre la recopilación, el uso y la divulgación de Su información cuando utiliza el Servicio y le informa sobre Sus derechos de privacidad y cómo la ley lo protege.</p>
         </div>
         <div class="paragraph">
-          <p>Usamos sus datos personales para proporcionar y mejorar el Servicio. Al usar el Servicio, acepta la recopilación y el uso de información de acuerdo con esta Política de Privacidad. Esta Política de Privacidad se ha creado con la ayuda de la <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">Plantilla de Política de Privacidad <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>.</p>
+          <p>Usamos sus datos personales para proporcionar y mejorar el Servicio. Al usar el Servicio, acepta la recopilación y el uso de información de acuerdo con esta Política de Privacidad. Esta Política de Privacidad se ha creado con la ayuda de la <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">Plantilla de Política de Privacidad <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>.</p>
         </div>
 
 
