--- a/hi-in/privacy-policy/index.html
+++ b/hi-in/privacy-policy/index.html
@@ -194,7 +194,7 @@
           <p>जब आप सेवा का उपयोग करते हैं तो यह गोपनीयता नीति आपकी जानकारी के संग्रह, उपयोग और प्रकटीकरण पर हमारी नीतियों और प्रक्रियाओं का वर्णन करती है और आपको आपके गोपनीयता अधिकारों के बारे में बताती है और कानून आपकी सुरक्षा कैसे करता है।</p>
         </div>
         <div class="paragraph">
-          <p>हम सेवा प्रदान करने और उसमें सुधार करने के लिए आपके व्यक्तिगत डेटा का उपयोग करते हैं। सेवा का उपयोग करके, आप इस गोपनीयता नीति के अनुसार जानकारी के संग्रह और उपयोग के लिए सहमत हैं। यह गोपनीयता नीति <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">गोपनीयता नीति टेम्प्लेट <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a> की सहायता से बनाई गई है ।</p>
+          <p>हम सेवा प्रदान करने और उसमें सुधार करने के लिए आपके व्यक्तिगत डेटा का उपयोग करते हैं। सेवा का उपयोग करके, आप इस गोपनीयता नीति के अनुसार जानकारी के संग्रह और उपयोग के लिए सहमत हैं। यह गोपनीयता नीति <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">गोपनीयता नीति टेम्प्लेट <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a> की सहायता से बनाई गई है ।</p>
         </div>
 
 
