--- a/ja-jp/privacy-policy/index.html
+++ b/ja-jp/privacy-policy/index.html
@@ -195,7 +195,7 @@
           <p>このプライバシーポリシーは、お客様が本サービスを使用する際のお客様の情報の収集、使用、および開示に関する当社のポリシーと手順を説明し、お客様のプライバシー権と法律がお客様を保護する方法について説明します。</p>
         </div>
         <div class="paragraph">
-          <p>当社は、お客様の個人データを使用して、サービスを提供および改善します。本サービスを利用することにより、お客様は本プライバシーポリシーに従って情報を収集および使用することに同意するものとします。このプライバシーポリシーは、<a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">プライバシーポリシーテンプレート <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>を使用して作成されています。</p>
+          <p>当社は、お客様の個人データを使用して、サービスを提供および改善します。本サービスを利用することにより、お客様は本プライバシーポリシーに従って情報を収集および使用することに同意するものとします。このプライバシーポリシーは、<a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">プライバシーポリシーテンプレート <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>を使用して作成されています。</p>
         </div>
 
 
