--- a/km-kh/privacy-policy/index.html
+++ b/km-kh/privacy-policy/index.html
@@ -194,7 +194,7 @@
           <p>គោលការណ៍ឯកជនភាពនេះពិពណ៌នាអំពីគោលការណ៍ និងនីតិវិធីរបស់យើងលើការប្រមូល ការប្រើប្រាស់ និងការបង្ហាញព័ត៌មានរបស់អ្នក នៅពេលអ្នកប្រើប្រាស់សេវាកម្ម ហើយប្រាប់អ្នកអំពីសិទ្ធិឯកជនភាពរបស់អ្នក និងរបៀបដែលច្បាប់ការពារអ្នក។</p>
         </div>
         <div class="paragraph">
-          <p>យើងប្រើប្រាស់ទិន្នន័យផ្ទាល់ខ្លួនរបស់អ្នក ដើម្បីផ្តល់ និងកែលម្អសេវាកម្ម។ តាមរយៈការប្រើប្រាស់សេវាកម្ម អ្នកយល់ព្រមចំពោះការប្រមូល និងប្រើប្រាស់ព័ត៌មានដោយអនុលោមតាមគោលការណ៍ឯកជនភាពនេះ។ គោលការណ៍ឯកជនភាពនេះត្រូវបានបង្កើតឡើងដោយមានជំនួយពី <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">គំរូគោលការណ៍ឯកជនភាព <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>.</p>
+          <p>យើងប្រើប្រាស់ទិន្នន័យផ្ទាល់ខ្លួនរបស់អ្នក ដើម្បីផ្តល់ និងកែលម្អសេវាកម្ម។ តាមរយៈការប្រើប្រាស់សេវាកម្ម អ្នកយល់ព្រមចំពោះការប្រមូល និងប្រើប្រាស់ព័ត៌មានដោយអនុលោមតាមគោលការណ៍ឯកជនភាពនេះ។ គោលការណ៍ឯកជនភាពនេះត្រូវបានបង្កើតឡើងដោយមានជំនួយពី <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">គំរូគោលការណ៍ឯកជនភាព <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>.</p>
         </div>
 
 
