--- a/ko-kr/privacy-policy/index.html
+++ b/ko-kr/privacy-policy/index.html
@@ -194,7 +194,7 @@
           <p>이 개인정보 보호정책은 귀하가 서비스를 사용할 때 귀하의 정보를 수집, 사용 및 공개하는 것에 대한 당사의 정책 및 절차를 설명하고 귀하의 개인정보 보호 권li와 법이 귀하를 보호하는 방법을 알려줍니다.</p>
         </div>
         <div class="paragraph">
-          <p>저희는 서비스를 제공하고 개선하기 위해 귀하의 개인 데이터를 사용합니다. 서비스를 사용함으로써 귀하는 본 개인정보 보호정책에 따라 정보를 수집하고 사용하는 데 동의합니다. 이 개인정보 보호정책은 <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">개인정보 보호정책 템플릿 <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></a>의 도움으로 작성되었습니다.</p>
+          <p>저희는 서비스를 제공하고 개선하기 위해 귀하의 개인 데이터를 사용합니다. 서비스를 사용함으로써 귀하는 본 개인정보 보호정책에 따라 정보를 수집하고 사용하는 데 동의합니다. 이 개인정보 보호정책은 <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">개인정보 보호정책 템플릿 <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></a>의 도움으로 작성되었습니다.</p>
         </div>
 
 
