--- a/ms-my/privacy-policy/index.html
+++ b/ms-my/privacy-policy/index.html
@@ -194,7 +194,7 @@
           <p>Dasar Privasi ini menerangkan dasar dan prosedur Kami tentang pengumpulan, penggunaan dan pendedahan maklumat Anda apabila Anda menggunakan Perkhidmatan dan memberitahu Anda tentang hak privasi Anda dan cara undang-undang melindungi Anda.</p>
         </div>
         <div class="paragraph">
-          <p>Kami menggunakan data Peribadi Anda untuk menyediakan dan menambah baik Perkhidmatan. Dengan menggunakan Perkhidmatan, Anda bersetuju menerima pengumpulan dan penggunaan maklumat mengikut Dasar Privasi ini. Dasar Privasi ini telah dibuat dengan bantuan <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">Templat Dasar Privasi <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>.</p>
+          <p>Kami menggunakan data Peribadi Anda untuk menyediakan dan menambah baik Perkhidmatan. Dengan menggunakan Perkhidmatan, Anda bersetuju menerima pengumpulan dan penggunaan maklumat mengikut Dasar Privasi ini. Dasar Privasi ini telah dibuat dengan bantuan <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">Templat Dasar Privasi <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>.</p>
         </div>
 
 
