--- a/my-bu/privacy-policy/index.html
+++ b/my-bu/privacy-policy/index.html
@@ -194,7 +194,7 @@
           <p>ဤကိုယ်ရေးကိုယ်တာမူဝါဒသည် ဝန်ဆောင်မှုကို သင်အသုံးပြုသည့်အခါ သင့်အချက်အလက်များကို စုဆောင်းခြင်း၊ အသုံးပြုခြင်းနှင့် ထုတ်ဖော်ခြင်းဆိုင်ရာ ကျွန်ုပ်တို့၏မူဝါဒများနှင့် လုပ်ထုံးလုပ်နည်းများကို ဖော်ပြထားပြီး သင်၏ကိုယ်ရေးကိုယ်တာအခွင့်အရေးများနှင့် သင့်အား ဥပဒေက မည်သို့အကာအကွယ်ပေးထားကြောင်း ပြောပြပါသည်။</p>
         </div>
         <div class="paragraph">
-          <p>ဝန်ဆောင်မှုကို ပေးဆောင်ရန်နှင့် တိုးတက်စေရန်အတွက် ကျွန်ုပ်တို့သည် သင့်ကိုယ်ရေးကိုယ်တာဒေတာကို အသုံးပြုပါသည်။ ဝန်ဆောင်မှုကိုအသုံးပြုခြင်းဖြင့် သင်သည် ဤကိုယ်ရေးကိုယ်တာမူဝါဒနှင့်အညီ အချက်အလက်စုဆောင်းခြင်းနှင့် အသုံးပြုခြင်းကို သဘောတူပါသည်။ ဤကိုယ်ရေးကိုယ်တာမူဝါဒကို <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">ကိုယ်ရေးကိုယ်တာမူဝါဒ နမူနာ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a> ၏အကူအညီဖြင့် ဖန်တီးထားပါသည်။ ။</p>
+          <p>ဝန်ဆောင်မှုကို ပေးဆောင်ရန်နှင့် တိုးတက်စေရန်အတွက် ကျွန်ုပ်တို့သည် သင့်ကိုယ်ရေးကိုယ်တာဒေတာကို အသုံးပြုပါသည်။ ဝန်ဆောင်မှုကိုအသုံးပြုခြင်းဖြင့် သင်သည် ဤကိုယ်ရေးကိုယ်တာမူဝါဒနှင့်အညီ အချက်အလက်စုဆောင်းခြင်းနှင့် အသုံးပြုခြင်းကို သဘောတူပါသည်။ ဤကိုယ်ရေးကိုယ်တာမူဝါဒကို <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">ကိုယ်ရေးကိုယ်တာမူဝါဒ နမူနာ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a> ၏အကူအညီဖြင့် ဖန်တီးထားပါသည်။ ။</p>
         </div>
 
 
