--- a/id-id/privacy-policy/index.html
+++ b/id-id/privacy-policy/index.html
@@ -194,7 +194,7 @@
           <p>Kebijakan Privasi ini menjelaskan kebijakan dan prosedur kami tentang pengumpulan, penggunaan, dan pengungkapan informasi Anda saat Anda menggunakan Layanan dan memberi tahu Anda tentang hak privasi Anda dan bagaimana hukum melindungi Anda.</p>
         </div>
         <div class="paragraph">
-          <p>Kami menggunakan data Pribadi Anda untuk menyediakan dan meningkatkan Layanan. Dengan menggunakan Layanan, Anda menyetujui pengumpulan dan penggunaan informasi sesuai dengan Kebijakan Privasi ini. Kebijakan Privasi ini dibuat dengan bantuan <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">Template Kebijakan Privasi <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>.</p>
+          <p>Kami menggunakan data Pribadi Anda untuk menyediakan dan meningkatkan Layanan. Dengan menggunakan Layanan, Anda menyetujui pengumpulan dan penggunaan informasi sesuai dengan Kebijakan Privasi ini. Kebijakan Privasi ini dibuat dengan bantuan <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">Template Kebijakan Privasi <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>.</p>
         </div>
 
 
