--- a/km-kh/privacy-policy/index.html
+++ b/km-kh/privacy-policy/index.html
@@ -304,7 +304,7 @@
             </li>
             <li>
               <p>
-                <strong>Flash Cookies។</strong> លក្ខណៈពិសេសមួយចំនួននៃសេវាកម្មរបស់យើងអាចប្រើវត្ថុដែលបានរក្សាទុកក្នុងមូលដ្ឋាន (ឬ Flash Cookies) ដើម្បីប្រមូល និងរក្សាទុកព័ត៌មានអំពីចំណូលចិត្តរបស់អ្នក ឬសកម្មភាពរបស់អ្នកនៅលើសេវាកម្មរបស់យើង។ Flash Cookies មិន​ត្រូវ​បាន​គ្រប់​គ្រង​ដោយ​ការ​កំណត់​កម្មវិធី​រុករក​ដូច​គ្នា​នឹង​អ្វី​ដែល​បាន​ប្រើ​សម្រាប់ Browser Cookies។ សម្រាប់ព័ត៌មានបន្ថែមអំពីរបៀបដែលអ្នកអាចលុប Flash Cookies សូមអាន "តើខ្ញុំអាចផ្លាស់ប្តូរការកំណត់សម្រាប់ការបិទ ឬលុបវត្ថុដែលបានចែករំលែកក្នុងតំបន់នៅឯណា?" មាននៅ <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;"> https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>
+                <strong>Flash Cookies។</strong> លក្ខណៈពិសេសមួយចំនួននៃសេវាកម្មរបស់យើងអាចប្រើវត្ថុដែលបានរក្សាទុកក្នុងមូលដ្ឋាន (ឬ Flash Cookies) ដើម្បីប្រមូល និងរក្សាទុកព័ត៌មានអំពីចំណូលចិត្តរបស់អ្នក ឬសកម្មភាពរបស់អ្នកនៅលើសេវាកម្មរបស់យើង។ Flash Cookies មិន​ត្រូវ​បាន​គ្រប់​គ្រង​ដោយ​ការ​កំណត់​កម្មវិធី​រុករក​ដូច​គ្នា​នឹង​អ្វី​ដែល​បាន​ប្រើ​សម្រាប់ Browser Cookies។ សម្រាប់ព័ត៌មានបន្ថែមអំពីរបៀបដែលអ្នកអាចលុប Flash Cookies សូមអាន "តើខ្ញុំអាចផ្លាស់ប្តូរការកំណត់សម្រាប់ការបិទ ឬលុបវត្ថុដែលបានចែករំលែកក្នុងតំបន់នៅឯណា?" មាននៅ <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;"> https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>
               </p>
             </li>
             <li>
@@ -315,7 +315,7 @@
           </ul>
         </div>
         <div class="paragraph">
-          <p>ខូគីអាចជាខូគី "បន្ត" ឬ "វគ្គ"។ ខូគីដែលជាប់លាប់នៅតែមាននៅលើកុំព្យូទ័រផ្ទាល់ខ្លួន ឬឧបករណ៍ចល័តរបស់អ្នក នៅពេលអ្នកបិទអ៊ីនធឺណិត ខណៈពេលដែលខូឃីសម័យត្រូវបានលុបភ្លាមៗនៅពេលអ្នកបិទកម្មវិធីរុករកតាមអ៊ីនធឺណិតរបស់អ្នក។ ស្វែងយល់បន្ថែមអំពីខូគី៖ <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">ការប្រើប្រាស់ខូគីដោយគោលការណ៍ឯកជនភាពឥតគិតថ្លៃ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>.</p>
+          <p>ខូគីអាចជាខូគី "បន្ត" ឬ "វគ្គ"។ ខូគីដែលជាប់លាប់នៅតែមាននៅលើកុំព្យូទ័រផ្ទាល់ខ្លួន ឬឧបករណ៍ចល័តរបស់អ្នក នៅពេលអ្នកបិទអ៊ីនធឺណិត ខណៈពេលដែលខូឃីសម័យត្រូវបានលុបភ្លាមៗនៅពេលអ្នកបិទកម្មវិធីរុករកតាមអ៊ីនធឺណិតរបស់អ្នក។ ស្វែងយល់បន្ថែមអំពីខូគី៖ <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">ការប្រើប្រាស់ខូគីដោយគោលការណ៍ឯកជនភាពឥតគិតថ្លៃ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>.</p>
         </div>
         <div class="paragraph">
           <p>យើងប្រើទាំង Session និង Persistent Cookies សម្រាប់គោលបំណងដែលបានកំណត់ខាងក្រោម៖</p>
@@ -500,12 +500,12 @@
           <ul>
             <li>
               <p>តាមអ៊ីមែល៖<br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a><br>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></p>
             </li>
             <li>
               <p>ដោយចូលទៅកាន់ទំព័រនេះនៅលើគេហទំព័ររបស់យើង៖<br>
-                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></p>
             </li>
           </ul>
         </div>
