--- a/hi-in/privacy-policy/index.html
+++ b/hi-in/privacy-policy/index.html
@@ -304,7 +304,7 @@
             </li>
             <li>
               <p>
-                <strong>फ्लैश कुकीज।</strong> हमारी सेवा की कुछ विशेषताएं आपकी प्राथमिकताओं या हमारी सेवा पर आपकी गतिविधि के बारे में जानकारी एकत्र करने और संग्रहीत करने के लिए स्थानीय संग्रहीत वस्तुओं (या फ्लैश कुकीज़) का उपयोग कर सकती हैं। फ्लैश कुकीज़ को उसी ब्राउज़र सेटिंग्स द्वारा प्रबंधित नहीं किया जाता है जो ब्राउज़र कुकीज़ के लिए उपयोग की जाती हैं। आप फ्लैश कुकीज़ को कैसे हटा सकते हैं, इस बारे में अधिक जानकारी के लिए, कृपया पढ़ें "मैं स्थानीय साझा वस्तुओं को अक्षम करने या हटाने के लिए सेटिंग्स कहां बदल सकता हूं?" पर उपलब्ध है <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>
+                <strong>फ्लैश कुकीज।</strong> हमारी सेवा की कुछ विशेषताएं आपकी प्राथमिकताओं या हमारी सेवा पर आपकी गतिविधि के बारे में जानकारी एकत्र करने और संग्रहीत करने के लिए स्थानीय संग्रहीत वस्तुओं (या फ्लैश कुकीज़) का उपयोग कर सकती हैं। फ्लैश कुकीज़ को उसी ब्राउज़र सेटिंग्स द्वारा प्रबंधित नहीं किया जाता है जो ब्राउज़र कुकीज़ के लिए उपयोग की जाती हैं। आप फ्लैश कुकीज़ को कैसे हटा सकते हैं, इस बारे में अधिक जानकारी के लिए, कृपया पढ़ें "मैं स्थानीय साझा वस्तुओं को अक्षम करने या हटाने के लिए सेटिंग्स कहां बदल सकता हूं?" पर उपलब्ध है <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>
               </p>
             </li>
             <li>
@@ -315,7 +315,7 @@
           </ul>
         </div>
         <div class="paragraph">
-          <p>कुकीज़ "स्थायी" या "सत्र" कुकी हो सकती हैं। जब आप ऑफ़लाइन होते हैं तो आपके व्यक्तिगत कंप्यूटर या मोबाइल डिवाइस पर स्थायी कुकीज़ बनी रहती हैं, जबकि जैसे ही आप अपना वेब ब्राउज़र बंद करते हैं, सत्र कुकीज़ हटा दी जाती हैं। कुकीज़ के बारे में अधिक जानें: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">मुफ्त गोपनीयता नीति द्वारा कुकीज़ का उपयोग <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>।</p>
+          <p>कुकीज़ "स्थायी" या "सत्र" कुकी हो सकती हैं। जब आप ऑफ़लाइन होते हैं तो आपके व्यक्तिगत कंप्यूटर या मोबाइल डिवाइस पर स्थायी कुकीज़ बनी रहती हैं, जबकि जैसे ही आप अपना वेब ब्राउज़र बंद करते हैं, सत्र कुकीज़ हटा दी जाती हैं। कुकीज़ के बारे में अधिक जानें: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">मुफ्त गोपनीयता नीति द्वारा कुकीज़ का उपयोग <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>।</p>
         </div>
         <div class="paragraph">
           <p>हम नीचे दिए गए उद्देश्यों के लिए सत्र और स्थायी कुकीज़ दोनों का उपयोग करते हैं:</p>
@@ -499,12 +499,12 @@
             <ul>
               <li>
                 <p>ईमेल द्वारा:<br>
-                  <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a><br>
-                  <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                  <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a><br>
+                  <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></p>
               </li>
               <li>
                 <p>हमारी वेबसाइट पर इस पेज पर जाकर:<br>
-                  <a href="../../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                  <a href="../../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></p>
               </li>
             </ul>
           </div>
