--- a/ko-kr/privacy-policy/index.html
+++ b/ko-kr/privacy-policy/index.html
@@ -304,7 +304,7 @@
             </li>
             <li>
               <p>
-                <strong>플래시 쿠키.</strong> 당사 서비스의 특정 기능은 로컬 저장 개체(또는 플래시 쿠키)를 사용하여 당사 서비스에서의 귀하의 기본 설정 또는 귀하의 활동에 대한 정보를 수집 및 저장할 수 있습니다. 플래시 쿠키는 브라우저 쿠키에 사용되는 것과 동일한 브라우저 설정으로 관li되지 않습니다. 플래시 쿠키를 삭제하는 방법에 대한 자세한 내용은 "로컬 공유 개체를 비활성화하거나 삭제하기 위한 설정은 어디에서 변경할 수 있습니까?"를 참조하십시오. <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;">에서 사용 가능 https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></a>
+                <strong>플래시 쿠키.</strong> 당사 서비스의 특정 기능은 로컬 저장 개체(또는 플래시 쿠키)를 사용하여 당사 서비스에서의 귀하의 기본 설정 또는 귀하의 활동에 대한 정보를 수집 및 저장할 수 있습니다. 플래시 쿠키는 브라우저 쿠키에 사용되는 것과 동일한 브라우저 설정으로 관li되지 않습니다. 플래시 쿠키를 삭제하는 방법에 대한 자세한 내용은 "로컬 공유 개체를 비활성화하거나 삭제하기 위한 설정은 어디에서 변경할 수 있습니까?"를 참조하십시오. <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;">에서 사용 가능 https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></a>
               </p>
             </li>
             <li>
@@ -315,7 +315,7 @@
           </ul>
         </div>
         <div class="paragraph">
-          <p>쿠키는 "영구" 또는 "세션" 쿠키일 수 있습니다. 영구 쿠키는 오프라인 상태일 때 개인용 컴퓨터나 모바일 장치에 남아 있는 반면 세션 쿠키는 웹 브라우저를 닫는 즉시 삭제됩니다. 쿠키에 대해 자세히 알아보기: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">무료 개인정보 보호정책에 따른 쿠키 사용 <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>.</p>
+          <p>쿠키는 "영구" 또는 "세션" 쿠키일 수 있습니다. 영구 쿠키는 오프라인 상태일 때 개인용 컴퓨터나 모바일 장치에 남아 있는 반면 세션 쿠키는 웹 브라우저를 닫는 즉시 삭제됩니다. 쿠키에 대해 자세히 알아보기: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">무료 개인정보 보호정책에 따른 쿠키 사용 <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>.</p>
         </div>
         <div class="paragraph">
           <p>우li는 아래 명시된 목적을 위해 세션 쿠키와 영구 쿠키를 모두 사용합니다.</p>
@@ -500,12 +500,12 @@
           <ul>
             <li>
               <p>이메일:<br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></a></p>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></a><br>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></a></p>
             </li>
             <li>
               <p>당사 웹사이트에서 이 페이지를 방문하면:<br>
-                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></a></p>
+                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></a></p>
             </li>
           </ul>
         </div>
