--- a/ms-my/privacy-policy/index.html
+++ b/ms-my/privacy-policy/index.html
@@ -304,7 +304,7 @@
             </li>
             <li>
               <p>
-                <strong>Kuki Flash.</strong> Ciri tertentu Perkhidmatan kami mungkin menggunakan objek tersimpan setempat (atau Kuki Flash) untuk mengumpul dan menyimpan maklumat tentang pilihan Anda atau aktiviti Anda pada Perkhidmatan kami. Kuki Flash tidak diuruskan oleh tetapan penyemak imbas yang sama seperti yang digunakan untuk Kuki Penyemak Imbas. Untuk mendapatkan maklumat lanjut tentang cara Anda boleh memadam Kuki Flash, sila baca "Di manakah saya boleh menukar tetapan untuk melumpuhkan atau memadam objek kongsi setempat?" tersedia di <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>
+                <strong>Kuki Flash.</strong> Ciri tertentu Perkhidmatan kami mungkin menggunakan objek tersimpan setempat (atau Kuki Flash) untuk mengumpul dan menyimpan maklumat tentang pilihan Anda atau aktiviti Anda pada Perkhidmatan kami. Kuki Flash tidak diuruskan oleh tetapan penyemak imbas yang sama seperti yang digunakan untuk Kuki Penyemak Imbas. Untuk mendapatkan maklumat lanjut tentang cara Anda boleh memadam Kuki Flash, sila baca "Di manakah saya boleh menukar tetapan untuk melumpuhkan atau memadam objek kongsi setempat?" tersedia di <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>
               </p>
             </li>
             <li>
@@ -315,7 +315,7 @@
           </ul>
         </div>
         <div class="paragraph">
-          <p>Kuki boleh menjadi Kuki "Berterusan" atau "Sesi". Kuki Berterusan kekal pada komputer peribadi atau peranti mudah alih anda apabila Anda pergi ke luar talian, manakala Kuki Sesi dipadamkan sebaik sahaja Anda menutup pelayar web Anda. Ketahui lebih lanjut tentang kuki: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">Penggunaan Kuki oleh Dasar Privasi Percuma <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>.</p>
+          <p>Kuki boleh menjadi Kuki "Berterusan" atau "Sesi". Kuki Berterusan kekal pada komputer peribadi atau peranti mudah alih anda apabila Anda pergi ke luar talian, manakala Kuki Sesi dipadamkan sebaik sahaja Anda menutup pelayar web Anda. Ketahui lebih lanjut tentang kuki: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">Penggunaan Kuki oleh Dasar Privasi Percuma <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>.</p>
         </div>
         <div class="paragraph">
           <p>Kami menggunakan kedua-dua Sesi dan Kuki Gigih untuk tujuan yang dinyatakan di bawah:</p>
@@ -500,12 +500,12 @@
           <ul>
             <li>
               <p>Melalui e-mel:<br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a><br>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></p>
             </li>
             <li>
               <p>Dengan melawat halaman ini di tapak web kami:<br>
-                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></p>
             </li>
           </ul>
         </div>
