--- a/my-bu/privacy-policy/index.html
+++ b/my-bu/privacy-policy/index.html
@@ -304,7 +304,7 @@
             </li>
             <li>
               <p>
-                <strong>Flash Cookies။</strong> ကျွန်ုပ်တို့၏ဝန်ဆောင်မှု၏ အချို့သောအင်္ဂါရပ်များသည် သင့်စိတ်ကြိုက်များ သို့မဟုတ် ကျွန်ုပ်တို့၏ဝန်ဆောင်မှုပေါ်ရှိ သင်၏လုပ်ဆောင်မှုများအကြောင်း အချက်အလက်များကို စုဆောင်းသိမ်းဆည်းရန် ဒေသတွင်း သိမ်းဆည်းထားသော အရာဝတ္ထုများ (သို့မဟုတ် Flash Cookies) ကို အသုံးပြုနိုင်ပါသည်။ Flash Cookies ကို Browser Cookies အတွက် အသုံးပြုသည့် တူညီသော ဘရောက်ဆာ ဆက်တင်များက စီမံခန့်ခွဲခြင်း မရှိပါ။ Flash Cookies ကို သင် မည်ကဲ့သို့ ဖျက်နိုင်သည် နှင့် ပတ်သက်သော နောက်ထပ် အချက်အလက် များအတွက် ကျေးဇူးပြု၍ "ပိတ်ခြင်း အတွက် ဆက်တင်များကို ဘယ်မှာ ပြောင်းရပါမည်၊ သို့မဟုတ် ဒေသတွင်း မျှဝေထားသော အရာများကို ဖျက်ခြင်း" ကို ဖတ်ရှုပါ။ <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_blanks_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;"> https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>
+                <strong>Flash Cookies။</strong> ကျွန်ုပ်တို့၏ဝန်ဆောင်မှု၏ အချို့သောအင်္ဂါရပ်များသည် သင့်စိတ်ကြိုက်များ သို့မဟုတ် ကျွန်ုပ်တို့၏ဝန်ဆောင်မှုပေါ်ရှိ သင်၏လုပ်ဆောင်မှုများအကြောင်း အချက်အလက်များကို စုဆောင်းသိမ်းဆည်းရန် ဒေသတွင်း သိမ်းဆည်းထားသော အရာဝတ္ထုများ (သို့မဟုတ် Flash Cookies) ကို အသုံးပြုနိုင်ပါသည်။ Flash Cookies ကို Browser Cookies အတွက် အသုံးပြုသည့် တူညီသော ဘရောက်ဆာ ဆက်တင်များက စီမံခန့်ခွဲခြင်း မရှိပါ။ Flash Cookies ကို သင် မည်ကဲ့သို့ ဖျက်နိုင်သည် နှင့် ပတ်သက်သော နောက်ထပ် အချက်အလက် များအတွက် ကျေးဇူးပြု၍ "ပိတ်ခြင်း အတွက် ဆက်တင်များကို ဘယ်မှာ ပြောင်းရပါမည်၊ သို့မဟုတ် ဒေသတွင်း မျှဝေထားသော အရာများကို ဖျက်ခြင်း" ကို ဖတ်ရှုပါ။ <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_blanks_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;"> https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>
               </p>
             </li>
             <li>
@@ -315,7 +315,7 @@
           </ul>
         </div>
         <div class="paragraph">
-          <p>ကွတ်ကီးများသည် "Persistent" သို့မဟုတ် "Session" Cookies ဖြစ်နိုင်သည်။ သင့်ဝဘ်ဘရောက်ဆာကို သင်ပိတ်လိုက်သည်နှင့် သင်အော့ဖ်လိုင်းသွားသည့်အခါ ဆက်ရှင်ကွတ်ကီးများသည် သင့်ကိုယ်ပိုင်ကွန်ပြူတာ သို့မဟုတ် မိုဘိုင်းစက်ပစ္စည်းတွင် ရှိနေမည်ဖြစ်ပြီး၊ သင်က သင့်ဝဘ်ဘရောက်ဆာကို ပိတ်လိုက်သည်နှင့် Session Cookies များကို ဖျက်ပစ်မည်ဖြစ်သည်။ ကွက်ကီးများအကြောင်း ပိုမိုလေ့လာပါ- <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">အခမဲ့ကိုယ်ရေးကိုယ်တာမူဝါဒဖြင့် ကွတ်ကီးအသုံးပြုမှု <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a> ။</p>
+          <p>ကွတ်ကီးများသည် "Persistent" သို့မဟုတ် "Session" Cookies ဖြစ်နိုင်သည်။ သင့်ဝဘ်ဘရောက်ဆာကို သင်ပိတ်လိုက်သည်နှင့် သင်အော့ဖ်လိုင်းသွားသည့်အခါ ဆက်ရှင်ကွတ်ကီးများသည် သင့်ကိုယ်ပိုင်ကွန်ပြူတာ သို့မဟုတ် မိုဘိုင်းစက်ပစ္စည်းတွင် ရှိနေမည်ဖြစ်ပြီး၊ သင်က သင့်ဝဘ်ဘရောက်ဆာကို ပိတ်လိုက်သည်နှင့် Session Cookies များကို ဖျက်ပစ်မည်ဖြစ်သည်။ ကွက်ကီးများအကြောင်း ပိုမိုလေ့လာပါ- <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">အခမဲ့ကိုယ်ရေးကိုယ်တာမူဝါဒဖြင့် ကွတ်ကီးအသုံးပြုမှု <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a> ။</p>
         </div>
         <div class="paragraph">
           <p>အောက်တွင်ဖော်ပြထားသောရည်ရွယ်ချက်များအတွက် Session နှင့် Persistent Cookies နှစ်မျိုးလုံးကို ကျွန်ုပ်တို့အသုံးပြုသည်-</p>
@@ -500,12 +500,12 @@
           <ul>
             <li>
               <p>အီးမေးလ်ဖြင့်-<br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a><br>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></p>
             </li>
             <li>
               <p>ကျွန်ုပ်တို့၏ဝဘ်ဆိုဒ်တွင် ဤစာမျက်နှာကို ဝင်ရောက်ကြည့်ရှုခြင်းဖြင့်-<br>
-                <a href="../contact/" rel="external nofollow noopener" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                <a href="../contact/" rel="external nofollow noopener" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></p>
             </li>
           </ul>
         </div>
