sorting Languages A_Z (country code)

--- a/fil-ph/privacy-policy/index.html
+++ b/fil-ph/privacy-policy/index.html
@@ -623,11 +623,11 @@
           </div>
 
           <div class="selection" id="selection">
-            <div class="select" style="margin-top: 0px;">
-              <a href="/en-us/privacy-policy/"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="Estados Unidos"> US</h5></a>
+            <div class="select">
+              <a href="/my-bu/privacy-policy/" style="margin-top: 0px;"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="Myanmar"> BU</h5></a>
             </div>
             <div class="select">
-              <a href="/en-uk/privacy-policy/"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="United Kingdom"> UK</h5></a>
+              <a href="/zh-cn/privacy-policy/"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="Tsina"> CN</h5></a>
             </div>
             <div class="select">
               <a href="/es-es/privacy-policy/"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="Espanya"> ES</h5></a>
@@ -651,22 +651,22 @@
               <a href="/ms-my/privacy-policy/"><h5><img src="https://flagcdn.com/my.svg" width="30" alt="Malaysia"> MY</h5></a>
             </div>
             <div class="select">
-              <a href="/my-bu/privacy-policy/"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="Myanmar"> BU</h5></a>
-            </div>
-            <div class="select">
               <a href="/pt-pt/privacy-policy/"><h5><img src="https://flagcdn.com/pt.svg" width="30" alt="Portugal"> PT</h5></a>
             </div>
             <div class="select">
               <a href="/ru-ru/privacy-policy/"><h5><img src="https://flagcdn.com/ru.svg" width="30" alt="Russia"> RU</h5></a>
             </div>
             <div class="select">
-              <a href="/vi-vn/privacy-policy/"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="Vietnam"> VN</h5></a>
+              <a href="/zh-tw/privacy-policy/"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="Taiwan"> TW</h5></a>
             </div>
             <div class="select">
-              <a href="/zh-cn/privacy-policy/"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="Tsina"> CN</h5></a>
+              <a href="/en-uk/privacy-policy/"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="United Kingdom"> UK</h5></a>
+            </div>
+            <div class="select">
+              <a href="/en-us/privacy-policy/"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="Estados Unidos"> US</h5></a>
             </div>
             <div class="select" style="margin-bottom: 0px;">
-              <a href="/zh-tw/privacy-policy/"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="Taiwan"> TW</h5></a>
+              <a href="/vi-vn/privacy-policy/"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="Vietnam"> VN</h5></a>
             </div>
           </div>
         </div>
