--- a/fil-ph/404.html
+++ b/fil-ph/404.html
@@ -284,11 +284,11 @@
           </div>
 
           <div class="selection" id="selection">
-            <div class="select" style="margin-top: 0px;">
-              <a href="/en-us/404"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="Estados Unidos"> US</h5></a>
+            <div class="select">
+              <a href="/my-bu/404" style="margin-top: 0px;"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="Myanmar"> BU</h5></a>
             </div>
             <div class="select">
-              <a href="/en-uk/404"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="United Kingdom"> UK</h5></a>
+              <a href="/zh-cn/404"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="Tsina"> CN</h5></a>
             </div>
             <div class="select">
               <a href="/es-es/404"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="Espanya"> ES</h5></a>
@@ -312,22 +312,22 @@
               <a href="/ms-my/404"><h5><img src="https://flagcdn.com/my.svg" width="30" alt="Malaysia"> MY</h5></a>
             </div>
             <div class="select">
-              <a href="/my-bu/404"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="Myanmar"> BU</h5></a>
-            </div>
-            <div class="select">
               <a href="/pt-pt/404"><h5><img src="https://flagcdn.com/pt.svg" width="30" alt="Portugal"> PT</h5></a>
             </div>
             <div class="select">
               <a href="/ru-ru/404"><h5><img src="https://flagcdn.com/ru.svg" width="30" alt="Russia"> RU</h5></a>
             </div>
             <div class="select">
-              <a href="/vi-vn/404"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="Vietnam"> VN</h5></a>
+              <a href="/zh-tw/404"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="Taiwan"> TW</h5></a>
             </div>
             <div class="select">
-              <a href="/zh-cn/404"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="Tsina"> CN</h5></a>
+              <a href="/en-uk/404"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="United Kingdom"> UK</h5></a>
+            </div>
+            <div class="select">
+              <a href="/en-us/404"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="Estados Unidos"> US</h5></a>
             </div>
             <div class="select" style="margin-bottom: 0px;">
-              <a href="/zh-tw/404"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="Taiwan"> TW</h5></a>
+              <a href="/vi-vn/404"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="Vietnam"> VN</h5></a>
             </div>
           </div>
         </div>
