--- a/id-id/404.html
+++ b/id-id/404.html
@@ -285,49 +285,49 @@
 
           <div class="selection" id="selection">
             <div class="select" style="margin-top: 0px;">
-              <a href="/en-us/404"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="Amerika Serikat"> US</h5></a>
+              <a href="/my-bu/404/"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="Myanmar"> BU</h5></a>
             </div>
             <div class="select">
-              <a href="/en-uk/404"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="Britania Raya"> UK</h5></a>
+              <a href="/zh-cn/404/"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="Cina"> CN</h5></a>
             </div>
             <div class="select">
-              <a href="/es-es/404"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="Spanyol"> ES</h5></a>
+              <a href="/es-es/404/"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="Spanyol"> ES</h5></a>
             </div>
             <div class="select">
-              <a href="/fil-ph/404"><h5><img src="https://flagcdn.com/ph.svg" width="30" alt="Filipina"> PH</h5></a>
+              <a href="/hi-in/404/"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="India"> IN</h5></a>
             </div>
             <div class="select">
-              <a href="/hi-in/404"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="India"> IN</h5></a>
+              <a href="/ja-jp/404/"><h5><img src="https://flagcdn.com/jp.svg" width="30" alt="Jepang"> JP</h5></a>
             </div>
             <div class="select">
-              <a href="/ja-jp/404"><h5><img src="https://flagcdn.com/jp.svg" width="30" alt="Jepang"> JP</h5></a>
+              <a href="/km-kh/404/"><h5><img src="https://flagcdn.com/kh.svg" width="30" alt="Kamboja"> KH</h5></a>
             </div>
             <div class="select">
-              <a href="/km-kh/404"><h5><img src="https://flagcdn.com/kh.svg" width="30" alt="Kamboja"> KH</h5></a>
+              <a href="/ko-kr/404/"><h5><img src="https://flagcdn.com/kr.svg" width="30" alt="Korea"> KR</h5></a>
             </div>
             <div class="select">
-              <a href="/ko-kr/404"><h5><img src="https://flagcdn.com/kr.svg" width="30" alt="Korea"> KR</h5></a>
+              <a href="/ms-my/404/"><h5><img src="https://flagcdn.com/my.svg" width="30" alt="Malaysia"> MY</h5></a>
             </div>
             <div class="select">
-              <a href="/ms-my/404"><h5><img src="https://flagcdn.com/my.svg" width="30" alt="Malaysia"> MY</h5></a>
+              <a href="/fil-ph/404/"><h5><img src="https://flagcdn.com/ph.svg" width="30" alt="Filipina"> PH</h5></a>
             </div>
             <div class="select">
-              <a href="/my-bu/404"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="Myanmar"> BU</h5></a>
+              <a href="/pt-pt/404/"><h5><img src="https://flagcdn.com/pt.svg" width="30" alt="Portugal"> PT</h5></a>
             </div>
             <div class="select">
-              <a href="/pt-pt/404"><h5><img src="https://flagcdn.com/pt.svg" width="30" alt="Portugal"> PT</h5></a>
+              <a href="/ru-ru/404/"><h5><img src="https://flagcdn.com/ru.svg" width="30" alt="Rusia"> RU</h5></a>
             </div>
             <div class="select">
-              <a href="/ru-ru/404"><h5><img src="https://flagcdn.com/ru.svg" width="30" alt="Rusia"> RU</h5></a>
+              <a href="/zh-tw/404/"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="Taiwan"> TW</h5></a>
             </div>
             <div class="select">
-              <a href="/vi-vn/404"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="Vietnam"> VN</h5></a>
+              <a href="/en-uk/404/"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="Britania Raya"> UK</h5></a>
             </div>
             <div class="select">
-              <a href="/zh-cn/404"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="Cina"> CN</h5></a>
+              <a href="/en-us/404/"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="Amerika Serikat"> US</h5></a>
             </div>
             <div class="select" style="margin-bottom: 0px;">
-              <a href="/zh-tw/404"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="Taiwan"> TW</h5></a>
+              <a href="/vi-vn/404/"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="Vietnam"> VN</h5></a>
             </div>
           </div>
         </div>
