--- a/ko-kr/404.html
+++ b/ko-kr/404.html
@@ -285,16 +285,13 @@
 
           <div class="selection" id="selection">
             <div class="select" style="margin-top: 0px;">
-              <a href="/en-us/404"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="미국"> US</h5></a>
+              <a href="/my-bu/404"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="미얀마"> BU</h5></a>
             </div>
             <div class="select">
-              <a href="/en-uk/404"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="영국"> UK</h5></a>
+              <a href="/zh-cn/404"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="중국"> CN</h5></a>
             </div>
             <div class="select">
               <a href="/es-es/404"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="스페인"> ES</h5></a>
-            </div>
-            <div class="select">
-              <a href="/fil-ph/404"><h5><img src="https://flagcdn.com/ph.svg" width="30" alt="필리핀 제도"> PH</h5></a>
             </div>
             <div class="select">
               <a href="/hi-in/404"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="인도"> IN</h5></a>
@@ -312,7 +309,7 @@
               <a href="/ms-my/404"><h5><img src="https://flagcdn.com/my.svg" width="30" alt="말레이시아"> MY</h5></a>
             </div>
             <div class="select">
-              <a href="/my-bu/404"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="미얀마"> BU</h5></a>
+              <a href="/fil-ph/404"><h5><img src="https://flagcdn.com/ph.svg" width="30" alt="필리핀 제도"> PH</h5></a>
             </div>
             <div class="select">
               <a href="/pt-pt/404"><h5><img src="https://flagcdn.com/pt.svg" width="30" alt="포르투갈"> PT</h5></a>
@@ -321,13 +318,16 @@
               <a href="/ru-ru/404"><h5><img src="https://flagcdn.com/ru.svg" width="30" alt="러시아"> RU</h5></a>
             </div>
             <div class="select">
-              <a href="/vi-vn/404"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="베트남"> VN</h5></a>
+              <a href="/zh_tw/404"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="대만"> TW</h5></a>
             </div>
             <div class="select">
-              <a href="/zh-cn/404"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="중국"> CN</h5></a>
+              <a href="/en-uk/404"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="영국"> UK</h5></a>
+            </div>
+            <div class="select">
+              <a href="/en-us/404"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="미국"> US</h5></a>
             </div>
             <div class="select" style="margin-bottom: 0px;">
-              <a href="/zh-tw/404"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="대만"> TW</h5></a>
+              <a href="/vi-vn/404"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="베트남"> VN</h5></a>
             </div>
           </div>
         </div>
