--- a/my-bu/privacy-policy/index.html
+++ b/my-bu/privacy-policy/index.html
@@ -624,49 +624,49 @@
 
           <div class="selection" id="selection">
             <div class="select" style="margin-top: 0px;">
-              <a href="/en-us/privacy-policy"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="ယူအက်စ်"> US</h5></a>
+              <a href="/zh-cn/privacy-policy/"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="တရုတ်"> CN</h5></a>
             </div>
             <div class="select">
-              <a href="/en-uk/privacy-policy"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="ယူနိုက်တက်ကင်းဒမ်း"> UK</h5></a>
+              <a href="/es-es/privacy-policy/"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="စပိန်"> ES</h5></a>
             </div>
             <div class="select">
-              <a href="/es-es/privacy-policy"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="စပိန်"> ES</h5></a>
+              <a href="/hi-in/privacy-policy/"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="အိန္ဒိယ"> IN</h5></a>
             </div>
             <div class="select">
-              <a href="/fil-ph/privacy-policy"><h5><img src="https://flagcdn.com/ph.svg" width="30" alt="ဖိလစ်ပိုင်"> PH</h5></a>
+              <a href="/id-id/privacy-policy/"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="အင်ဒိုနီးရှား"> ID</h5></a>
             </div>
             <div class="select">
-              <a href="/hi-in/privacy-policy"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="အိန္ဒိယ"> IN</h5></a>
+              <a href="/ja-jp/privacy-policy/"><h5><img src="https://flagcdn.com/jp.svg" width="30" alt="ဂျပန်"> JP</h5></a>
             </div>
             <div class="select">
-              <a href="/id-id/privacy-policy"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="အင်ဒိုနီးရှား"> ID</h5></a>
+              <a href="/km-kh/privacy-policy/"><h5><img src="https://flagcdn.com/kh.svg" width="30" alt="ကမ္ဘောဒီးယား"> KH</h5></a>
             </div>
             <div class="select">
-              <a href="/ja-jp/privacy-policy"><h5><img src="https://flagcdn.com/jp.svg" width="30" alt="ဂျပန်"> JP</h5></a>
+              <a href="/ko-kr/privacy-policy/"><h5><img src="https://flagcdn.com/kr.svg" width="30" alt="ကိုရီးယား"> KR</h5></a>
             </div>
             <div class="select">
-              <a href="/km-kh/privacy-policy"><h5><img src="https://flagcdn.com/kh.svg" width="30" alt="ကမ္ဘောဒီးယား"> KH</h5></a>
+              <a href="/ms-my/privacy-policy/"><h5><img src="https://flagcdn.com/my.svg" width="30" alt="မလေးရှား"> MY</h5></a>
             </div>
             <div class="select">
-              <a href="/ko-kr/privacy-policy"><h5><img src="https://flagcdn.com/kr.svg" width="30" alt="ကိုရီးယား"> KR</h5></a>
+              <a href="/fil-ph/privacy-policy/"><h5><img src="https://flagcdn.com/ph.svg" width="30" alt="ဖိလစ်ပိုင်"> PH</h5></a>
             </div>
             <div class="select">
-              <a href="/ms-my/privacy-policy"><h5><img src="https://flagcdn.com/my.svg" width="30" alt="မလေးရှား"> MY</h5></a>
+              <a href="/pt-pt/privacy-policy/"><h5><img src="https://flagcdn.com/pt.svg" width="30" alt="ပေါ်တူဂီ"> PT</h5></a>
             </div>
             <div class="select">
-              <a href="/pt-pt/privacy-policy"><h5><img src="https://flagcdn.com/pt.svg" width="30" alt="ပေါ်တူဂီ"> PT</h5></a>
+              <a href="/ru-ru/privacy-policy/"><h5><img src="https://flagcdn.com/ru.svg" width="30" alt="ရုရှား"> RU</h5></a>
             </div>
             <div class="select">
-              <a href="/ru-ru/privacy-policy"><h5><img src="https://flagcdn.com/ru.svg" width="30" alt="ရုရှား"> RU</h5></a>
+              <a href="/zh-tw/privacy-policy/"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="ထိုင်ဝမ်"> TW</h5></a>
             </div>
             <div class="select">
-              <a href="/vi-vn/privacy-policy"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="ဗီယက်နမ်"> VN</h5></a>
+              <a href="/en-uk/privacy-policy/"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="ယူနိုက်တက်ကင်းဒမ်း"> UK</h5></a>
             </div>
             <div class="select">
-              <a href="/zh-cn/privacy-policy"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="တရုတ်"> CN</h5></a>
+              <a href="/en-us/privacy-policy/"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="ယူအက်စ်"> US</h5></a>
             </div>
             <div class="select" style="margin-bottom: 0px;">
-              <a href="/zh-tw/privacy-policy"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="ထိုင်ဝမ်"> TW</h5></a>
+              <a href="/vi-vn/privacy-policy/"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="ဗီယက်နမ်"> VN</h5></a>
             </div>
           </div>
         </div>
