--- a/pt-pt/privacy-policy/index.html
+++ b/pt-pt/privacy-policy/index.html
@@ -294,49 +294,49 @@
 
           <div class="selection" id="selection">
             <div class="select" style="margin-top: 0px;">
-              <a href="/en-us/privacy-policy"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="Estados Unidos"> US</h5></a>
+              <a href="/my-bu/privacy-policy/"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="Mianmar"> BU</h5></a>
             </div>
             <div class="select">
-              <a href="/en-uk/privacy-policy"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="Reino Unido"> UK</h5></a>
+              <a href="/zh-cn/privacy-policy/"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="China"> CN</h5></a>
             </div>
             <div class="select">
-              <a href="/es-es/privacy-policy"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="Espanha"> ES</h5></a>
+              <a href="/es-es/privacy-policy/"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="Espanha"> ES</h5></a>
             </div>
             <div class="select">
-              <a href="/fil-ph/privacy-policy"><h5><img src="https://flagcdn.com/ph.svg" width="30" alt="Filipinas"> PH</h5></a>
+              <a href="/hi-in/privacy-policy/"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="Índia"> IN</h5></a>
             </div>
             <div class="select">
-              <a href="/hi-in/privacy-policy"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="Índia"> IN</h5></a>
+              <a href="/id-id/privacy-policy/"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="Indonésia"> ID</h5></a>
             </div>
             <div class="select">
-              <a href="/id-id/privacy-policy"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="Indonésia"> ID</h5></a>
+              <a href="/ja-jp/privacy-policy/"><h5><img src="https://flagcdn.com/jp.svg" width="30" alt="Japão"> JP</h5></a>
             </div>
             <div class="select">
-              <a href="/ja-jp/privacy-policy"><h5><img src="https://flagcdn.com/jp.svg" width="30" alt="Japão"> JP</h5></a>
+              <a href="/km-kh/privacy-policy/"><h5><img src="https://flagcdn.com/kh.svg" width="30" alt="Camboja"> KH</h5></a>
             </div>
             <div class="select">
-              <a href="/km-kh/privacy-policy"><h5><img src="https://flagcdn.com/kh.svg" width="30" alt="Camboja"> KH</h5></a>
+              <a href="/ko-kr/privacy-policy/"><h5><img src="https://flagcdn.com/kr.svg" width="30" alt="Coréia"> KR</h5></a>
             </div>
             <div class="select">
-              <a href="/ko-kr/privacy-policy"><h5><img src="https://flagcdn.com/kr.svg" width="30" alt="Coréia"> KR</h5></a>
+              <a href="/ms-my/privacy-policy/"><h5><img src="https://flagcdn.com/my.svg" width="30" alt="Malásia"> MY</h5></a>
             </div>
             <div class="select">
-              <a href="/ms-my/privacy-policy"><h5><img src="https://flagcdn.com/my.svg" width="30" alt="Malásia"> MY</h5></a>
+              <a href="/fil-ph/privacy-policy/"><h5><img src="https://flagcdn.com/ph.svg" width="30" alt="Filipinas"> PH</h5></a>
             </div>
             <div class="select">
-              <a href="/my-bu/privacy-policy"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="Mianmar"> BU</h5></a>
+              <a href="/ru-ru/privacy-policy/"><h5><img src="https://flagcdn.com/ru.svg" width="30" alt="Rússia"> RU</h5></a>
             </div>
             <div class="select">
-              <a href="/ru-ru/privacy-policy"><h5><img src="https://flagcdn.com/ru.svg" width="30" alt="Rússia"> RU</h5></a>
+              <a href="/zh-tw/privacy-policy/"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="Taiwan"> TW</h5></a>
             </div>
             <div class="select">
-              <a href="/vi-vn/privacy-policy"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="Vietnã"> VN</h5></a>
+              <a href="/en-uk/privacy-policy/"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="Reino Unido"> UK</h5></a>
             </div>
             <div class="select">
-              <a href="/zh-cn/privacy-policy"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="China"> CN</h5></a>
+              <a href="/en-us/privacy-policy/"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="Estados Unidos"> US</h5></a>
             </div>
             <div class="select" style="margin-bottom: 0px;">
-              <a href="/zh-tw/privacy-policy"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="Taiwan"> TW</h5></a>
+              <a href="/vi-vn/privacy-policy/"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="Vietnã"> VN</h5></a>
             </div>
           </div>
         </div>
