--- a/fil-ph/privacy-policy/index.html
+++ b/fil-ph/privacy-policy/index.html
@@ -194,7 +194,7 @@
           <p>Itong Privacy Policy ay dini-describe ang Aming mga policy at mga procedure sa pag-collect, paggamit at pag-disclosure sa Iyong information habang ginagamit Mo ang Service at nagsasabi sa'yo about sa privacy rights Mo at paano Ka pino-protect-ahan ng batas.</p>
         </div>
         <div class="paragraph">
-          <p>Ginagamit Namin ang Personal data Mo para ma-provide at ma-improve ang Service. Sa paggamit sa Service, uma-agree Ka sa pag-collect at paggamit ng information in accordance sa Privacy Policy na'to. Ang Privacy Policy na'to ay ginawa sa tulong ng <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank"></a>Template ng Privacy Policy. <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></p>
+          <p>Ginagamit Namin ang Personal data Mo para ma-provide at ma-improve ang Service. Sa paggamit sa Service, uma-agree Ka sa pag-collect at paggamit ng information in accordance sa Privacy Policy na'to. Ang Privacy Policy na'to ay ginawa sa tulong ng <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">Template ng Privacy Policy. <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a></p>
         </div>
 
 
