--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
     <meta content="width=device-width,minimum-scale=1.0" name="viewport">
 
 
-    <link rel="shortcut icon" href="../media/assets/rfb.ico">
+    <link rel="shortcut icon" href="https://rarefrostbites.pages.dev/media/assets/rfb.ico">
     <meta http-equiv="refresh" content="0;url=/fil-ph/404" />
 
 
