--- a/ms-my/privacy-policy.html
+++ b/ms-my/privacy-policy.html
@@ -27,7 +27,7 @@
     <meta content="width=device-width,minimum-scale=1.0" name="viewport">
 
 
-    <link rel="shortcut icon" href="../media/assets/privacy-policy/rfbsafe.ico">
+    <link rel="shortcut icon" href="https://rarefrostbites.pages.dev/media/assets/privacy-policy/rfbsafe.ico">
     <link rel="canonical" href="https://rarefrostbites.pages.dev/privacy-policy/" />
 
 
