--- a/my-bu/privacy-policy/index.html
+++ b/my-bu/privacy-policy/index.html
@@ -183,7 +183,7 @@
         </div>
         
         <div class="pvc-title">
-          <h1>ကိုယ်ရေးကိုယ်တာ မူဝါဒ</h1>
+          <h1>ကိုယ်ရေးအချက်အလက်မူဝါဒ</h1>
         </div>
 
         <div class="date">
@@ -630,10 +630,10 @@
               <a href="/es-es/privacy-policy/"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="စပိန်"> ES</h5></a>
             </div>
             <div class="select">
-              <a href="/hi-in/privacy-policy/"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="အိန္ဒိယ"> IN</h5></a>
+              <a href="/id-id/privacy-policy/"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="အင်ဒိုနီးရှား"> ID</h5></a>
             </div>
             <div class="select">
-              <a href="/id-id/privacy-policy/"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="အင်ဒိုနီးရှား"> ID</h5></a>
+              <a href="/hi-in/privacy-policy/"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="အိန္ဒိယ"> IN</h5></a>
             </div>
             <div class="select">
               <a href="/ja-jp/privacy-policy/"><h5><img src="https://flagcdn.com/jp.svg" width="30" alt="ဂျပန်"> JP</h5></a>
