--- a/vi-vn/404.html
+++ b/vi-vn/404.html
@@ -103,7 +103,7 @@
             <a href="https://rarefrostbites.pages.dev/vi-vn/" style="margin-left: 20px;"><h2>Nhà</h2></a>
             <a href="https://rarefrostbites.pages.dev/vi-vn/apply/"><h2>Áp Dụng</h3></a>
             <a href="https://rarefrostbites.pages.dev/vi-vn/contact/"><h2>Liên hệ Chúng tôi</h3></a>
-            <a href="https://rarefrostbites.pages.dev/vi-vn/privacy-policy/" style="margin-right: 5px;"><h2>Chính sách bảo mật</h3></a>
+            <a href="https://rarefrostbites.pages.dev/vi-vn/privacy-policy/" style="margin-right: 5px;"><h2>Chính sách Bảo mật</h3></a>
           </div>
         </div>
         <div class="mobile-products" onclick="openProducts()">
@@ -162,7 +162,7 @@
           <a href="https://rarefrostbites.pages.dev/vi-vn/"><h2>Nhà</h2></a>
           <a href="https://rarefrostbites.pages.dev/vi-vn/apply/"><h2>Áp Dụng</h2></a>
           <a href="https://rarefrostbites.pages.dev/vi-vn/contact/"><h2>Liên hệ Chúng tôi</h2></a>
-          <a href="https://rarefrostbites.pages.dev/vi-vn/privacy-policy/"><h2>Chính sách bảo mật</h2></a>
+          <a href="https://rarefrostbites.pages.dev/vi-vn/privacy-policy/"><h2>Chính sách Bảo mật</h2></a>
         </div>
       </div>
       
@@ -269,7 +269,7 @@
         </div>
 
         <div class="pricon">
-          <a href="https://rarefrostbites.pages.dev/vi-vn/privacy-policy/"><h5>Chính sách bảo mật</h5></a>
+          <a href="https://rarefrostbites.pages.dev/vi-vn/privacy-policy/"><h5>Chính sách Bảo mật</h5></a>
           <a href="https://rarefrostbites.pages.dev/vi-vn/contact/"><h5>Liên hệ Chúng tôi</h5></a>
         </div>
 
@@ -294,10 +294,10 @@
               <a href="/es-es/404"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="Tây Ban Nha"> ES</h5></a>
             </div>
             <div class="select">
-              <a href="/hi-in/404"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="Ấn Độ"> IN</h5></a>
+              <a href="/id-id/404"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="Indonesia"> ID</h5></a>
             </div>
             <div class="select">
-              <a href="/id-id/404"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="Indonesia"> ID</h5></a>
+              <a href="/hi-in/404"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="Ấn Độ"> IN</h5></a>
             </div>
             <div class="select">
               <a href="/ja-jp/404"><h5><img src="https://flagcdn.com/jp.svg" width="30" alt="Nhật Bản"> JP</h5></a>
