--- a/id-id/privacy-policy/index.html
+++ b/id-id/privacy-policy/index.html
@@ -183,7 +183,7 @@
         </div>
         
         <div class="pvc-title">
-          <h1>Kebijakan Privasi</h1>
+          <h1>Rahasia Pribadi</h1>
         </div>
 
         <div class="tanggal">
