--- a/vi-vn/ASSETPAGE.html
+++ b/vi-vn/ASSETPAGE.html
@@ -104,7 +104,7 @@
             <a href="../vi-vn/" style="margin-left: 20px;"><h2>Nhà</h2></a>
             <a href="../vi-vn/apply/"><h2>Áp Dụng</h3></a>
             <a href="../vi-vn/contact/"><h2>Liên hệ Chúng tôi</h3></a>
-            <a href="../vi-vn/privacy-policy/" style="margin-right: 5px;"><h2>Chính sách bảo mật</h3></a>
+            <a href="../vi-vn/privacy-policy/" style="margin-right: 5px;"><h2>Chính sách Bảo mật</h3></a>
           </div>
         </div>
         <div class="mobile-products" onclick="openProducts()">
@@ -163,7 +163,7 @@
           <a href="../vi-vn/"><h2>Nhà</h2></a>
           <a href="../vi-vn/apply/"><h2>Áp Dụng</h2></a>
           <a href="../vi-vn/contact/"><h2>Liên hệ Chúng tôi</h2></a>
-          <a href="../vi-vn/privacy-policy/"><h2>Chính sách bảo mật</h2></a>
+          <a href="../vi-vn/privacy-policy/"><h2>Chính sách Bảo mật</h2></a>
         </div>
       </div>
       
@@ -270,7 +270,7 @@
         </div>
 
         <div class="pricon">
-          <a href="../vi-vn/privacy-policy/"><h5>Chính sách bảo mật</h5></a>
+          <a href="../vi-vn/privacy-policy/"><h5>Chính sách Bảo mật</h5></a>
           <a href="../vi-vn/contact/"><h5>Liên hệ Chúng tôi</h5></a>
         </div>
 
@@ -295,10 +295,10 @@
               <a href="/es-es/#"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="Tây Ban Nha"> ES</h5></a>
             </div>
             <div class="select">
-              <a href="/hi-in/#"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="Ấn Độ"> IN</h5></a>
+              <a href="/id-id/#"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="Indonesia"> ID</h5></a>
             </div>
             <div class="select">
-              <a href="/id-id/#"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="Indonesia"> ID</h5></a>
+              <a href="/hi-in/#"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="Ấn Độ"> IN</h5></a>
             </div>
             <div class="select">
               <a href="/ja-jp/#"><h5><img src="https://flagcdn.com/jp.svg" width="30" alt="Nhật Bản"> JP</h5></a>
