--- a/vi-vn/privacy-policy/index.html
+++ b/vi-vn/privacy-policy/index.html
@@ -245,7 +245,7 @@
               <p><strong>Dữ liệu sử dụng</strong>đề cập đến dữ liệu được thu thập tự động, được tạo ra bởi việc sử dụng Dịch vụ hoặc từ chính cơ sở hạ tầng Dịch vụ (ví dụ: thời lượng của một lượt truy cập trang).</p>
             </li>
             <li>
-              <p><strong>Trang web</strong>đề cập đến Nhóm RareFrostbites, có thể truy cập từ <a href="../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</strong></p>
+              <p><strong>Trang web</strong>đề cập đến Nhóm RareFrostbites, có thể truy cập từ <a href="../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a></strong></p>
             </li>
             <li>
               <p><strong>Bạn</strong>có nghĩa là cá nhân truy cập hoặc sử dụng Dịch vụ, hoặc nhóm/studio hoặc pháp nhân khác thay mặt cho cá nhân đó đang truy cập hoặc sử dụng Dịch vụ, nếu có.</p>
