--- a/vi-vn/privacy-policy/index.html
+++ b/vi-vn/privacy-policy/index.html
@@ -278,7 +278,8 @@
         </div>
         <div class="paragraph">
           <p>Dữ liệu sử dụng được thu thập tự động khi sử dụng Dịch vụ.</p>
-        </div><div class="paragraph">
+        </div>
+        <div class="paragraph">
           <p>Dữ liệu Sử dụng có thể bao gồm thông tin như địa chỉ Giao thức Internet trên Thiết bị của Bạn (ví dụ: địa chỉ IP), loại trình duyệt, phiên bản trình duyệt, các trang Dịch vụ của chúng tôi mà Bạn truy cập, ngày giờ Bạn truy cập, thời gian dành cho các trang đó , số nhận dạng thiết bị duy nhất và dữ liệu chẩn đoán khác.</p>
         </div>
         <div class="paragraph">
